@@ -14,7 +14,7 @@ class MIMEApplication(MIMENonMultipart):
     """Class for generating application/* MIME documents."""
 
     def __init__(self, _data, _subtype='octet-stream',
-                 _encoder=encoders.encode_base64, **_params):
+                 _encoder=encoders.encode_base64, *, policy=None, **_params):
         """Create an application/* type MIME document.
 
         _data is a string containing the raw application data.
@@ -31,6 +31,7 @@ class MIMEApplication(MIMENonMultipart):
         """
         if _subtype is None:
             raise TypeError('Invalid application MIME subtype')
-        MIMENonMultipart.__init__(self, 'application', _subtype, **_params)
+        MIMENonMultipart.__init__(self, 'application', _subtype, policy=policy,
+                                  **_params)
         self.set_payload(_data)
         _encoder(self)
